tests/NormalTests/paczka1/small_fuzzy/51100119.err
Error in line 6: 6SbW S436 101,26
Error in line 5: qfVe7nIO45 A43 51,0
Error in line 3: 6SbW S436 57,4
